Fixed colors contrast, media queries. Cleaned up the code

--- a/RWD/survey-form/css/main.css
+++ b/RWD/survey-form/css/main.css
@@ -17,7 +17,7 @@ label,
   font-size: 1.1rem;
   margin-bottom: -0.05rem;
   text-align: left;
-  color:rgba(1, 1, 1, 0.514);
+  color:rgb(1, 1, 1);
 }
 /* Body */
 body {
@@ -43,7 +43,7 @@ body {
 }
 /* Form */
 .container {
-  width: 100%;
+  width: 55vw;
   margin: 2rem auto 0.5rem auto;
   background-image: linear-gradient(rgba(177, 177, 177, 0.699), rgba(216,152,100, 0.822));
   padding: 1rem;
@@ -53,7 +53,6 @@ body {
   display: block;
   height: 2rem;
   width: 100%;
-  height: 2rem;
   padding: 0.375rem auto;
   border-radius: 0.3rem;
   border-color: rgba(1, 1, 1, 0.514);
@@ -89,20 +88,20 @@ label {
   border-color: rgba(1, 1, 1, 0.514);
 }
 textarea {
-  width: 99%;
+  width: 100%;
   min-height: 100px;
   border-radius: 0.3rem;
   border-color: rgba(1, 1, 1, 0.514);
   resize: vertical;
 }
 /* Media */
-@media (min-width: 576px) {
-    .container {
-      max-width: 540px;
-    }
+@media screen and (max-width: 414px) {
+  .container {
+    width: 90vw;
   }
-@media (min-width: 768px) {
-    .container {
-      max-width: 720px;
-    }
+}
+@media screen and (max-width: 1024px) {
+  .container {
+    width: 80vw;
   }
+}
